@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 11-30-2005 changed: moved decision of what seeking to do into player and added workaround for files wich mplayer can't determin current percentage for.
   - 11-30-2005 fixed: the correct item is now highlighted when using Autoswitching with large icons in Video and Pictures
   - 11-03-2005 changed: Removed GetPTS and unified what m_pPlayer->GetTime returns. It now always returns time in milliseconds.
   - 11-03-2005 fixed: dialogs sometimes didn't popup via ActivateWindow() in <execute> tags.
